# Telegram-Dialog

./: .gitignore  Makefile  README.md  client_telegram.py  docker-compose-prod.yml  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  example.env
backend/: Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py  pyproject.toml
backend/core/: celery.py  settings.py  urls.py
backend/dialogs/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/dialogs/admin/: __init__.py  dialogs.py  scenes.py
backend/dialogs/migrations/: 0001_initial.py  0001_squashed_0022_alter_scene_is_active.py  0002_initial.py  0002_remove_dialog_telegram_group_and_more.py  (+45 more)
backend/dj_telethon/: admin.py  apps.py  sessions.py  views.py
backend/djelethon/: apps.py  sessions.py  urls.py  utils.py  views.py
backend/drains/: admin.py  apps.py  models.py
backend/imports/: admin.py  models.py  tasks.py
backend/proxies/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/roles/: models.py  views.py
backend/sources/: admin.py  models.py  tasks.py  utils.py
backend/telegram/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/telegram_clients/: admin.py  apps.py  forms.py  models.py  tasks.py  utils.py
backend/telegram_groups/: apps.py  forms.py  tasks.py  urls.py  views.py
backend/telegram_messages/: admin.py  apps.py  models.py
backend/telegram_users/: admin.py  urls.py  views.py
backend/telethonupdt/: admin.py  apps.py  models.py  sessions.py
(+466 files in other folders)
