[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vasilii Kletkin <kletkinvasilii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "<5.0"
telethon = "^1.34.0"
django-telethon = "^1.2.4"
celery = "^5.3.6"
django-model-utils = "^4.4.0"
redis = "^5.0.2"
django-extensions = "^3.2.3"
python-socks = "^2.4.4"
django-celery-results = "^2.5.1"
requests = "^2.31.0"
django-celery-beat = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
